--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
 	},
 	"homepage": "https://github.com/abayo-luc/SendIT-API#readme",
 	"dependencies": {
-		"express": "^4.16.4"
+		"body-parser": "^1.18.3",
+		"express": "^4.16.4",
+		"validatorjs": "^3.15.1"
 	},
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
