--- a/package.json
+++ b/package.json
@@ -22,20 +22,20 @@
 	"dependencies": {
 		"body-parser": "^1.18.3",
 		"express": "^4.16.4",
-		"validatorjs": "^3.15.1"
-	},
-	"devDependencies": {
+		"validatorjs": "^3.15.1",
 		"babel-cli": "^6.26.0",
-		"babel-eslint": "^10.0.1",
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-preset-env": "^1.7.0",
+		"nodemon": "^1.18.6"
+	},
+	"devDependencies": {
+		"babel-eslint": "^10.0.1",
 		"chai": "^4.2.0",
 		"chai-http": "^4.2.0",
 		"eslint": "^5.8.0",
 		"eslint-config-airbnb-base": "^13.1.0",
 		"eslint-plugin-import": "^2.14.0",
 		"mocha": "^5.2.0",
-		"nodemon": "^1.18.6",
 		"prettier-eslint": "^8.8.2",
 		"prettier-eslint-cli": "^4.7.1"
 	}
