--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"test": "NODE_ENV=test mocha --timeout 25000 --require babel-register src/test/**/*.spec.js --exit",
 		"start": "node --exec babel-node src/server.js",
 		"server": "nodemon --exec babel-node src/server.js",
-		"fix-code": "prettier-eslint --write './*/**{js,jsx}' "
+		"fix-code": "prettier-eslint --write './*/**{js,jsx}' ",
+		"coveralls": "nyc report --reporter=text-lcov | coveralls"
 	},
 	"repository": {
 		"type": "git",
@@ -20,13 +21,14 @@
 	},
 	"homepage": "https://github.com/abayo-luc/SendIT-API#readme",
 	"dependencies": {
-		"body-parser": "^1.18.3",
-		"express": "^4.16.4",
-		"validatorjs": "^3.15.1",
 		"babel-cli": "^6.26.0",
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-preset-env": "^1.7.0",
-		"nodemon": "^1.18.6"
+		"body-parser": "^1.18.3",
+		"coveralls": "^3.0.2",
+		"express": "^4.16.4",
+		"nodemon": "^1.18.6",
+		"validatorjs": "^3.15.1"
 	},
 	"devDependencies": {
 		"babel-eslint": "^10.0.1",
