--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"start": "node --exec babel-node src/server.js",
 		"server": "nodemon --exec babel-node src/server.js",
 		"fix-code": "prettier-eslint --write './*/**{js,jsx}' ",
-		"coveralls": "nyc report --reporter=text-lcov | coveralls"
+		"coveralls": "yarn run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls"
 	},
 	"repository": {
 		"type": "git",
@@ -25,7 +25,6 @@
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-preset-env": "^1.7.0",
 		"body-parser": "^1.18.3",
-		"coveralls": "^3.0.2",
 		"express": "^4.16.4",
 		"nodemon": "^1.18.6",
 		"validatorjs": "^3.15.1"
@@ -34,10 +33,12 @@
 		"babel-eslint": "^10.0.1",
 		"chai": "^4.2.0",
 		"chai-http": "^4.2.0",
+		"coveralls": "^3.0.2",
 		"eslint": "^5.8.0",
 		"eslint-config-airbnb-base": "^13.1.0",
 		"eslint-plugin-import": "^2.14.0",
 		"mocha": "^5.2.0",
+		"mocha-lcov-reporter": "^1.3.0",
 		"prettier-eslint": "^8.8.2",
 		"prettier-eslint-cli": "^4.7.1"
 	}
