--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
 	"description": "",
 	"main": "server.js",
 	"scripts": {
-		"test": "NODE_ENV=test mocha --timeout 25000 --require babel-register src/test/**/*.spec.js --exit",
+		"test": "nyc --require babel-core/register mocha src/test/**/*.spec.js --exit",
 		"start": "node --exec babel-node src/server.js",
 		"server": "nodemon --exec babel-node src/server.js",
 		"fix-code": "prettier-eslint --write './*/**{js,jsx}' ",
-		"coveralls": "yarn run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls"
+		"coveralls": "nyc report --reporter=text-lcov | coveralls"
 	},
 	"repository": {
 		"type": "git",
@@ -39,6 +39,7 @@
 		"eslint-plugin-import": "^2.14.0",
 		"mocha": "^5.2.0",
 		"mocha-lcov-reporter": "^1.3.0",
+		"nyc": "^13.1.0",
 		"prettier-eslint": "^8.8.2",
 		"prettier-eslint-cli": "^4.7.1"
 	}
