--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "server.js",
 	"scripts": {
-		"test": "nyc --require babel-core/register mocha src/test/**/*.spec.js --exit",
+		"test": "NODE_ENV=test nyc --reporter=text --reporter=lcov mocha --timeout 25000 --require babel-register src/test/**/*.spec.js --exit",
 		"start": "node --exec babel-node src/server.js",
 		"server": "nodemon --exec babel-node src/server.js",
 		"fix-code": "prettier-eslint --write './*/**{js,jsx}' ",
