--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ node_js:
 cache:
   directories:
     - "node_modules"
-script: yarn test
+script: npm test
 after_success:
-- yarn run coveralls
+- npm run coveralls
