--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"babel-eslint": "^10.0.1",
 		"chai": "^4.2.0",
 		"chai-http": "^4.2.0",
+		"codecov": "^3.1.0",
 		"coveralls": "^3.0.2",
 		"eslint": "^5.8.0",
 		"eslint-config-airbnb-base": "^13.1.0",
