--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
 	"main": "server.js",
 	"scripts": {
 		"test": "NODE_ENV=test nyc --reporter=text --reporter=lcov mocha --timeout 25000 --require babel-register src/test/**/*.spec.js --exit",
-		"start": "node --exec babel-node src/server.js",
-		"server": "nodemon --exec babel-node src/server.js",
+		"start": "nodemon --exec babel-node src/server.js",
 		"fix-code": "prettier-eslint --write './*/**{js,jsx}' ",
 		"coveralls": "nyc report --reporter=text-lcov | coveralls"
 	},
