--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
 		"babel-cli": "^6.26.0",
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-preset-env": "^1.7.0",
+		"bcrypt": "^3.0.2",
+		"body-parser": "^1.18.3",
+		"cors": "^2.8.5",
 		"express": "^4.16.4",
 		"nodemon": "^1.18.6",
+		"passport": "^0.4.0",
 		"validatorjs": "^3.15.1"
 	},
 	"devDependencies": {
