--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: node_js
 node_js:
   - "stable"
+cache:
+  directories:
+    - "node_modules"
+before_install:
+  - npm i -g npm@6.4.1
 script: npm test
 after_success:
   - npm run coveralls
