--- a/.babelrc
+++ b/.babelrc
@@ -1,20 +1,11 @@
 {
-	"presets": [
-		[
-			"env",
-			{
-				"targets": {
-					"node": "6.10"
-				}
-			}
-		]
-	],
-	"plugins": [
-		[
-			"transform-object-rest-spread",
-			{
-				"useBuiltIns": true
-			}
-		]
-	]
+  "presets": ["env"],
+  "plugins": [
+    [
+      "transform-object-rest-spread",
+      {
+        "useBuiltIns": true
+      }
+    ]
+  ]
 }
