--- a/package.json
+++ b/package.json
@@ -1,49 +1,49 @@
 {
-	"name": "sendit-api",
-	"version": "1.0.0",
-	"description": "",
-	"main": "server.js",
-	"scripts": {
-		"test": "NODE_ENV=test nyc --reporter=text --reporter=lcov mocha --timeout 25000 --require babel-register server/test/**/*.spec.js --exit",
-		"start": "nodemon --exec babel-node server/server.js",
-		"fix-code": "prettier-eslint --write './*/**{js,jsx}' ",
-		"coveralls": "nyc report --reporter=text-lcov | coveralls"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/abayo-luc/SendIT-API.git"
-	},
-	"author": "luc",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/abayo-luc/SendIT-API/issues"
-	},
-	"homepage": "https://github.com/abayo-luc/SendIT-API#readme",
-	"dependencies": {
-		"babel-cli": "^6.26.0",
-		"babel-plugin-transform-object-rest-spread": "^6.26.0",
-		"babel-preset-env": "^1.7.0",
-		"bcrypt": "^3.0.2",
-		"body-parser": "^1.18.3",
-		"cors": "^2.8.5",
-		"express": "^4.16.4",
-		"nodemon": "^1.18.6",
-		"passport": "^0.4.0",
-		"validatorjs": "^3.15.1"
-	},
-	"devDependencies": {
-		"babel-eslint": "^10.0.1",
-		"chai": "^4.2.0",
-		"chai-http": "^4.2.0",
-		"codecov": "^3.1.0",
-		"coveralls": "^3.0.2",
-		"eslint": "^5.8.0",
-		"eslint-config-airbnb-base": "^13.1.0",
-		"eslint-plugin-import": "^2.14.0",
-		"mocha": "^5.2.0",
-		"mocha-lcov-reporter": "^1.3.0",
-		"nyc": "^13.1.0",
-		"prettier-eslint": "^8.8.2",
-		"prettier-eslint-cli": "^4.7.1"
-	}
+  "name": "sendit-api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "NODE_ENV=test nyc --reporter=text --reporter=lcov mocha --timeout 25000 --require babel-polyfill --require babel-register server/test/**/*.spec.js --exit",
+    "start": "nodemon --exec babel-node server/server.js",
+    "fix-code": "prettier-eslint --write './*/**{js,jsx}' ",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/abayo-luc/SendIT-API.git"
+  },
+  "author": "luc",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/abayo-luc/SendIT-API/issues"
+  },
+  "homepage": "https://github.com/abayo-luc/SendIT-API#readme",
+  "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "bcrypt": "^3.0.2",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "nodemon": "^1.18.6",
+    "passport": "^0.4.0",
+    "validatorjs": "^3.15.1"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "babel-polyfill": "^6.26.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.0",
+    "codecov": "^3.1.0",
+    "coveralls": "^3.0.2",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "mocha": "^5.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
+    "nyc": "^13.1.0",
+    "prettier-eslint": "^8.8.2",
+    "prettier-eslint-cli": "^4.7.1"
+  }
 }
