--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "bcrypt": "^3.0.2",
-    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "nodemon": "^1.18.6",
     "passport": "^0.4.0",
-    "validatorjs": "^3.15.1"
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
