--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "bcrypt": "^3.0.2",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "moment": "^2.22.2",
     "nodemon": "^1.18.6",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "pg": "^7.6.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
