--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "bcrypt": "^3.0.2",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "moment": "^2.22.2",
     "nodemon": "^1.18.6",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "pg": "^7.6.1",
     "uuid": "^3.3.2"
   },
