--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,11 @@ node_js:
 cache:
   directories:
     - "node_modules"
+services:
+  - postgresql
 before_install:
   - npm i -g npm@6.4.1
+  - psql -c 'create database send_it_test;' -U postgres
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
