[ch-setting-db-#162114644]Add addons for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
 cache:
   directories:
     - "node_modules"
+addons:
+  postgresql: "9.6"
 services:
   - postgresql
 before_install:
@@ -13,9 +15,10 @@ before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
-  - npm run test:db:migrate
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
-script: npm test
+script:
+  - npm run test:db:migrate
+  - npm test
 after_success:
   - npm run coveralls
