--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pg": "^7.6.1",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "validator": "^10.9.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
