--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
     "nyc": "^13.1.0",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1"
+  },
+  "engines": {
+    "node": "10.13.0"
   }
 }
