--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-env": "^1.7.0",
     "bcrypt": "^3.0.2",
     "dotenv": "^6.1.0",
+    "email-validator": "^2.0.4",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "moment": "^2.22.2",
