--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
 services:
   - postgresql
 before_install:
-  - psql -c 'create database send_it_test;' -U postgres
+  - psql -c 'create database send_it_test' -U postgres
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
