--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
+    "mailgun-js": "^0.22.0",
     "moment": "^2.22.2",
     "nodemailer": "^4.7.0",
     "nodemon": "^1.18.6",
