--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ addons:
 services:
   - postgresql
 before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version [1.12.3]
   - psql -c 'create database send_it_test' -U postgres
-install: yarn
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
