--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,6 @@ addons:
 services:
   - postgresql
 before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.12.3
   - psql -c 'create database send_it_test' -U postgres
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
@@ -18,7 +17,7 @@ before_script:
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 script:
-  - yarn run test:db:migrate
-  - yarn test
+  - npm run test:db:migrate
+  - npm test
 after_success:
-  - yarn run coveralls
+  - npm run coveralls
